--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            AACS Lab
+            AITCS Lab
         </title>
         <meta charset="utf-8">
         
@@ -29,7 +29,7 @@
 
 <div id="sidebar-image">
     <a href="/">
-        <img src="/source/image/test.png" alt="sidebar image" class="sidebar-bottom">
+        <img src="image\logo.jpeg" alt="sidebar image" class="sidebar-bottom">
     </a>
 </div>
 
@@ -62,7 +62,7 @@
 <div id="AACS-Lab">
     <a href="/">
         <!-- <img src="/source/image/test.png" alt="" class="lab-logo"> -->
-        <h1 class="lab-name">AACS Lab</h1>
+        <h1 class="lab-name">AITCS Lab</h1>
         <h1 class="lab-location">at UESTC</h1>
     </a>
 </div>
